config(git): add references directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ data/**
 !data/**/
 !data/**/.gitkeep
 
+references/**
+!references/**/
+!references/**/.gitkeep
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
