site: test better nav items

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ url: "https://sedelmeyer.github.io/predicting-crime/"
 repository: "https://github.com/sedelmeyer/predicting-crime"
 
 header_pages:
- - pages/about.md
+ - [About](pages/about.md)
  - pages/data.md
  - pages/models.md
  - pages/results.md
+ - [repository]({{ site.repository }})
