site: add title to config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: minima
 url: "https://sedelmeyer.github.io/predicting-crime/"
 repository: "https://github.com/sedelmeyer/predicting-crime"
+title: "Predicting Crime In Boston"
 
 header_pages:
  - pages/about.md
